--- a/m7/91/css/index.css
+++ b/m7/91/css/index.css
@@ -1,19 +1,231 @@
-.footer{
+/*footer区域*/
+
+.footer {
     position: fixed;
-    bottom:0;
+    bottom: 0;
     width: 100%;
     height: 54px;
     display: flex;
     border-top: 1px solid #ccc;
     text-align: center;
     font-size: 12px;
+    background: #fff;
 }
 
-.footericon{
+.footericon {
     flex: 1;
 }
 
-.icon-a{
+.icon_a {
     display: block;
-    margin: 8px auto;
+    margin: 8px auto 0;
+}
+
+.iconactive,
+.iconactive i {
+    color: red;
+}
+
+
+/*box区域*/
+
+.box {
+    max-width: 6.4rem;
+    margin: 0 auto;
+}
+
+.header {
+    display: flex;
+    height: 44px;
+    padding: 0 15px;
+    background: #ef1313;
+    align-items: center;
+}
+
+.header_address {
+    margin-right: 15px;
+    color: #fff;
+}
+
+.header_form {
+    flex: 1;
+}
+
+.header_form input {
+    width: 100%;
+    box-sizing: border-box;
+    height: 28px;
+    border-radius: 8px;
+    border: none;
+}
+
+.header_message {
+    margin-left: 15px;
+    color: #fff;
+}
+
+
+/*图片轮播区域*/
+
+.banner {
+    overflow: hidden;
+    position: relative;
+    height: 2.6rem;
+    width: 6.4rem;
+    background: #666;
+}
+
+.inner {
+    position: relative;
+    width: 9999px;
+    left: 0;
+    top: 0;
+}
+
+.innerwraper {
+    width: 6.4rem;
+    float: left;
+}
+
+.innerwraper img {
+    width: 100%;
+}
+
+.pagination {
+    position: absolute;
+    bottom: 10px;
+    width: 100%;
+    text-align: center;
+}
+
+.pagination span {
+    display: inline-block;
+    width: .16rem;
+    height: .16rem;
+    background-color: #9aa499;
+    border-radius: 50%;
+    cursor: pointer;
+}
+
+.pagination .active {
+    background-color: #fff;
+    cursor: pointer;
+}
+
+.content {
+    display: flex;
+    padding-top: 0.1rem;
+    flex-wrap: wrap;
+    background: #fff;
+}
+
+.content div {
+    display: flex;
+    width: 25%;
+    height: 1.2rem;
+    flex-direction: column;
+    /*水平垂直居中*/
+    justify-content: center;
+    align-items: center;
+}
+
+.content div img {
+    width: .7rem;
+    height: .7rem;
+    border-radius: .35rem;
+    margin-bottom: .0.07rem;
+}
+
+.title {
+    height: .4rem;
+    padding: .1rem .15rem;
+    background: #f0f0f0;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.title span:nth-child(1) {
+    color: #999;
+    font-weight: 400;
+}
+
+.title span:nth-child(2) {
+    color: #c9394a;
+    font-weight: 400;
+}
+
+.items {
+    padding: 0 .3rem;
+    background: #fff;
+}
+
+.item {
+    position: relative;
+    border-bottom: 1px solid #ccc;
+    padding: .3rem 0;
+}
+
+.items .item:nth-child(1) .item_left {
+    background: url("http://szimg.mukewang.com/5806de7c00014a3105400300-360-202.jpg") no-repeat top center;
+    background-size: 90% auto;
+}
+
+.items .item:nth-child(2) .item_left {
+    background: url("http://szimg.mukewang.com/5806de7c00014a3105400300-360-202.jpg") no-repeat top center;
+    background-size: 90% auto;
+}
+
+.items .item:nth-child(3) .item_left {
+    background: url("http://szimg.mukewang.com/5806de7c00014a3105400300-360-202.jpg") no-repeat top center;
+    background-size: 90% auto;
+}
+
+.item_left {
+    float: left;
+    width: 1.6rem;
+    height: 1.2rem;
+}
+
+.item_center {
+    margin-left: 1.75rem;
+    margin-right: 1.5rem;
+}
+
+.item_center p:nth-child(1) {
+    font-size: .18rem;
+}
+
+.item_center p:nth-child(2) {
+    font-size: .14rem;
+    color: #999;
+}
+
+.item_center p:nth-child(3) i {
+    color: green;
+}
+
+.item_center p:nth-child(3) {
+    font-size: .14rem;
+    color: #999;
+}
+
+.item_center p:nth-child(4) {
+    font-size: .14rem;
+    color: #999;
+}
+
+.item_right {
+    position: absolute;
+    top: 30%;
+    right: .5rem;
+    color: #c9394a;
+}
+
+.item_right span {
+    font-size: .6rem;
+}
+
+.item_right em {
+    font-style: normal;
 }
